--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -426,7 +426,14 @@
                   Are you violating short-term rental restrictions and in jeopardy of receiving a fine or
                   legal action?
                 </h5>
-                <h5><a href="./quiz">Take our quiz to find out.</a></h5>
+                <a
+                    class="btn btn-lg btn-outline-primary has-icon"
+                    href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
+                    style="margin-top: 0.5em;"
+                  >
+                    <span class="fas fa-angle-right" role="img"></span>
+                    <span class="title">Take our quiz find out</span>
+                  </a>
                 <div class="accordion-group my-4" role="tablist" id="accordion-01">
                   <h3>Hosts:</h3>
                   <p>
