--- a/laws-and-fines/resolve-a-violation.html
+++ b/laws-and-fines/resolve-a-violation.html
@@ -415,25 +415,31 @@
                   sessions for residents to meet with Department representatives. 
                   
                   <h3>Lifting a Stop Work Order</h3>
-                  Requests to lift a Stop Work Order (SWO) must be made in writing and sent to:
-                  &nbsp;
-                  Diane
-                                    Leonard
-                  Mayor's Office of Special Enforcement
-                  22 Reade Street
-                  New York, NY
-                                    10007 &nbsp;
-                  <a href="mailto:dleonard@cityhall.nyc.gov "
-                                      >dleonard@cityhall.nyc.gov </a
-                                    >
-                  Fax: 212-788-6834
-                  <b
-                                      >
-                  *No work should be done until the SWO is lifted.*</b
-                  >
-                  Violation of the SWO will result in additional violations and civil penalties. The request
-                  must state your authority to request such an inspection as well as contact information. In
-                  addition, the following items must be provided:&nbsp; 
+                  <p>
+                    Requests to lift a Stop Work Order (SWO) must be made in writing and sent to:
+                  </p>
+
+                  <p>
+                    <strong>
+                      Diane Leonard<br />
+                      Mayor's Office of Special Enforcement<br />
+                    </strong>
+                    22 Reade Street<br />
+                    New York, NY 10007<br/>
+                    <a href="mailto:dleonard@cityhall.nyc.gov"
+                                        >dleonard@cityhall.nyc.gov</a
+                                      ><br />
+                    Fax: 212-788-6834
+                  </p>
+                  <p>
+                    <b
+                                        >
+                    *No work should be done until the SWO is lifted.*</b
+                    >
+                    Violation of the SWO will result in additional violations and civil penalties. The request
+                    must state your authority to request such an inspection as well as contact information. In
+                    addition, the following items must be provided:&nbsp; 
+                  </p>
 
                   <ol>
                     <li>
@@ -458,32 +464,40 @@
                       applicable).
                     </li>
                   </ol>
-                  Lastly, Certificates of Correction for Summonses issued by OSE must be filed and accepted
-                  at the
-                  <a href="https://www1.nyc.gov/site/buildings/about/agency-units.page#aeu"
-                    >DOB Administrative Enforcement Unit</a
-                  >. 
+                  <p>
+                    Lastly, Certificates of Correction for Summonses issued by OSE must be filed and accepted
+                    at the
+                    <a href="https://www1.nyc.gov/site/buildings/about/agency-units.page#aeu"
+                      >DOB Administrative Enforcement Unit</a
+                    >. 
+                  </p>
 
                   <h3>Lifting a Vacate Order</h3>
-                  Requests to lift a Vacate Order must be submitted by the property owner in writing and
-                  sent to:
-                  Diane Leonard
-                  Mayor's Office of Special Enforcement
-                  22 Reade
-                                    Street
-                  New York, NY 10007 &nbsp;
-                  <a href="mailto:dleonard@cityhall.nyc.gov"
-                                      >dleonard@cityhall.nyc.gov</a
-                                    >
-                  Fax: 212-788-6834
-                  Certificates of Correction for the summonses that are
-                  issued in conjunction with the Vacate Order must be filed and accepted at the
-                  <a href="https://www1.nyc.gov/site/buildings/about/agency-units.page#aeu"
-                    >DOB Administrative Enforcement Unit</a
-                  >. If work that requires a permit needs to be done to correct the violating conditions in
-                  conjunction with the Vacate Order, please submit copies of approved DOB plans and permits
-                  for such work. Compliance with all building and fire codes is required upon re-inspection
-                  to avoid further violations.
+                  <p>
+                    Requests to lift a Vacate Order must be submitted by the property owner in writing and
+                    sent to:
+                  </p><p>
+                    <strong>
+                      Diane Leonard<br />
+                      Mayor's Office of Special Enforcement<br />
+                    </strong>
+                    22 Reade Street<br />
+                    New York, NY 10007<br/>
+                    <a href="mailto:dleonard@cityhall.nyc.gov"
+                                        >dleonard@cityhall.nyc.gov</a
+                                      ><br />
+                    Fax: 212-788-6834
+                  </p>
+                  <p>
+                    Certificates of Correction for the summonses that are
+                    issued in conjunction with the Vacate Order must be filed and accepted at the
+                    <a href="https://www1.nyc.gov/site/buildings/about/agency-units.page#aeu"
+                      >DOB Administrative Enforcement Unit</a
+                    >. If work that requires a permit needs to be done to correct the violating conditions in
+                    conjunction with the Vacate Order, please submit copies of approved DOB plans and permits
+                    for such work. Compliance with all building and fire codes is required upon re-inspection
+                    to avoid further violations.
+                  </p>
                   <div
                     style="position: absolute; left: -40px; top: -25px; width: 1px; height: 1px; overflow: hidden;"
                     data-mce-bogus="1"
