copy updates, added language access page

--- a/about/contracts-and-solicitations.html
+++ b/about/contracts-and-solicitations.html
@@ -175,6 +175,11 @@
                               >Contracts & Solicitations</a
                             >
                           </li>
+                          <li>
+                            <a href="../about/language-access.html"
+                              >Language Access</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -198,7 +203,11 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
+                          <li>
+                            <a href="../illegal-short-term-rentals/quiz.html"
+                              >Quiz: Is Your Rental Legal?</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -274,7 +283,11 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-03">
                         <ul class="extensible-list">
                           <li><a href="../contact/contact.html">Contact OSE</a></li>
-                          <li><a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank">Submit a Complaint</a></li>
+                          <li>
+                            <a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
+                              >Submit a Complaint</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -413,6 +426,13 @@
                     role="listitem"
                   >
                     Contracts and Solicitations
+                  </a>
+                  <a
+                    href="./language-access.html"
+                    class="list-group-item list-group-item-action"
+                    role="listitem"
+                  >
+                    Language Access
                   </a>
                 </div>
               </nav>
