--- a/about/language-access.html
+++ b/about/language-access.html
@@ -9,7 +9,7 @@
     <!-- Corrects IE Compatibility Mode -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>Leadership | NYC Office of Special Enforcement</title>
+    <title>Mission and Vision | NYC Office of Special Enforcement</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="../fontawesome/css/all.min.css" />
@@ -203,7 +203,11 @@
                           <li>
                             <a href="../illegal-short-term-rentals/">About Illegal Short-Term Rentals</a>
                           </li>
-                          <li><a href="../illegal-short-term-rentals/quiz.html">Quiz: Is Your Rental Legal?</a></li>
+                          <li>
+                            <a href="../illegal-short-term-rentals/quiz.html"
+                              >Quiz: Is Your Rental Legal?</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -279,7 +283,11 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-03">
                         <ul class="extensible-list">
                           <li><a href="../contact/contact.html">Contact OSE</a></li>
-                          <li><a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank">Submit a Complaint</a></li>
+                          <li>
+                            <a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
+                              >Submit a Complaint</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -400,7 +408,7 @@
                   </a>
                   <a
                     href="./leadership.html"
-                    class="list-group-item list-group-item-action active"
+                    class="list-group-item list-group-item-action"
                     role="listitem"
                   >
                     Leadership
@@ -421,7 +429,7 @@
                   </a>
                   <a
                     href="./language-access.html"
-                    class="list-group-item list-group-item-action"
+                    class="list-group-item list-group-item-action active"
                     role="listitem"
                   >
                     Language Access
@@ -435,86 +443,94 @@
 
           <div class="col-xl-8 overflow-hidden" id="primary-content">
             <div class="my-5">
-              <div class="narrow my-4">
-                <h2>Leadership</h2>
+              <div class="narrow my-4" id="language-access">
+                <h2>Language Access</h2>
+                <div class="span6 about-description">
+                  <p>
+                    Mayor de Blasio’s Administration is committed to ensuring that New Yorkers who have
+                    limited English proficiency (LEP) are able to access information, programs, and services
+                    offered by NYC government.&nbsp;
+                  </p>
+                  <p>
+                    The City is governed by different
+                    <a href="https://www1.nyc.gov/site/immigrants/about/local-laws-executive-orders.page"
+                      >language access laws</a
+                    >.&nbsp; Local Law 30 of 2017 (LL30) is one of these laws.&nbsp; LL30 is one of the
+                    strongest laws in the country and requires that covered city agencies appoint a language
+                    access coordinator, develop language access implementation plans, provide telephonic
+                    interpretation in at least 100 languages, translate their most commonly distributed
+                    documents into the 10 designated citywide languages, and post signage about the
+                    availability of free interpretation services, among other requirements.
+                  </p>
+                  <p>
+                    <b>For more information about language access</b>, go to the
+                    <a href="https://www1.nyc.gov/site/immigrants/about/language-and-disability-access.page"
+                      >Mayor’s Office of Immigrant Affairs’ language access page</a
+                    >.
+                  </p>
+                  <h5>
+                    The Mayor’s Office’s Language Access Coordinator:
+                  </h5>
+                  <p>
+                    Kenneth Lo<br />
+                    Deputy Director, Language Access<br />
+                    Mayor’s Office of Immigrant Affairs <br />
+                    253 Broadway, 4th Floor<br />
+                    New York, NY 10007<br />
+                    (212) 346-6047<br />
+                    klo@moia.nyc.gov
+                  </p>
+                  <h5>
+                    Mayor’s Office Language Access Implementation Plan:
+                  </h5>
+                  <p>
+                    Local Law 30 requires covered agencies to publish language access implementation plans
+                    on their websites. &nbsp;The Mayor’s Office Language Access Implementation Plan includes
+                    all covered mayoral offices under Local Law 30 and is coordinated by MOIA. <br />
+                    <b></b><br />
+                    <a href="https://www1.nyc.gov/assets/immigrants/downloads/pdf/MO-LAIP-2020.pdf"
+                      ><b>View the Mayor’s Office Language Access Implementation Plan (2020) </b></a
+                    >
+                  </p>
+                  <h3>Disability Access and Disability Service Facilitators</h3>
+                  <p>
+                    As a result of&nbsp;<b
+                      ><a href="https://www1.nyc.gov/assets/mopd/downloads/pdf/local_law_27.pdf"
+                        >New York City Local Law 27 of 2016</a
+                      ></b
+                    >, city agencies are required to appoint a <b>Disability Service Facilitator</b>. The
+                    Disability Service Facilitator shall coordinate its efforts to comply with and carry out
+                    its responsibilities under the ADA and other federal, state and local laws and
+                    regulations concerning accessibility for persons with disabilities. These individuals
+                    are liaisons to New Yorkers with disabilities, connecting people with disabilities to
+                    city government.
+                  </p>
+                  <h5>For any unit with the Mayor's Office please contact:</h5>
+                  <ul>
+                    <li>New York City Mayor's Office (DSF)</li>
+                    <li>Noel Haight</li>
+                    <li>100 Gold Street, 2nd Floor</li>
+                    <li>New York, NY 10038</li>
+                    <li>Voice Phone: 212-788-2548</li>
+                    <li>Video Phone: 646-396-5830</li>
+                    <li>New York Relay users dial 711</li>
+                    <li>
+                      <a
+                        href="https://www1.nyc.gov/site/mopd/about/email-the-disability-service-facilitator.page"
+                        >Email the Mayor's Office DSF, Noel Haight</a
+                      >
+                    </li>
+                  </ul>
 
-                <div class="card leadership-card">
-                  <div class="card-header">
-                    <h3>Christian J. Klossner</h3>
-                  </div>
-                  <div class="card-body">
-                    <p>
-                      Christian J. Klossner is the Executive Director of the Office of Special Enforcement
-                      (OSE). He previously served for over five years as the deputy director of the District
-                      of Columbia's Office of Police Complaints (OPC), where he oversaw the agency's
-                      investigative, adjudication, mediation, outreach, and administrative activities. Prior
-                      to joining OPC, he worked as an assistant district attorney in the Office of the Special
-                      Narcotics Prosecutor of New York City and the Office of the Bronx District Attorney. He
-                      also served as an adjunct professor of trial advocacy at his alma mater, Fordham
-                      University School of Law. Before earning his J.D. from Fordham, Mr. Klossner worked as a
-                      campaign organizer, lobbyist, and staff supervisor with the New York Public Interest
-                      Research Group.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="card leadership-card">
-                  <div class="card-header">
-                    <h3>Aditi Sen</h3>
-                  </div>
-                  <div class="card-body">
-                    <p>
-                      Aditi Sen serves as a Special Advisor in Policy and Research, leading the data analytics
-                      and strategic campaign work for the office. Prior to joining OSE, she was a research
-                      analyst at the Center for Popular Democracy, producing research studies to support a
-                      wide range of state and local policy campaigns by community organizations nationwide, on
-                      issues such as housing affordability, fair scheduling initiatives, and education policy.
-                      Before CPD, she worked at SEIU Local 32BJ, where she used data analysis and strategic
-                      research to shape the union's worker organizing efforts in the residential real estate
-                      industry within New York City. Ms. Sen holds a Bachelor of Arts in Social Studies from
-                      Harvard College and a Master of Regional Planning from Cornell University.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="card leadership-card">
-                  <div class="card-header">
-                    <h3>Eryn DeFontes</h3>
-                  </div>
-                  <div class="card-body">
-                    <p>
-                      Eryn DeFontes is the Investigations Coordinator. Prior to her tenure at OSE, Ms.
-                      DeFontes served as the Deputy Director of the Labor Law/Prevailing Wage Investigations
-                      Unit at the NYC Department of Design and Construction (DDC), where she managed
-                      investigations into payroll, public works, and building services contracts violations,
-                      including allegations of underpayment and fraud. She also worked as an Administrative
-                      Law Judge at both the NYC Department of Consumer Affairs (DCA) and the Office of
-                      Administrative Trials and Hearings (OATH), where she adjudicated cases concerning breach
-                      of home improvement and construction contracts, licensing, permits, deceptive trade
-                      practices and fitness proceedings, and later served as the Associate Director of the
-                      Adjudication Division at DCA. Ms. DeFontes started her legal career as an Assistant
-                      District Attorney in the Domestic Violence Bureau at the Office of the Bronx District
-                      Attorney. She received her J.D. from the City University School of Law (CUNY).
-                    </p>
-                  </div>
-                </div>
-
-                <div class="card leadership-card">
-                  <div class="card-header">
-                    <h3>Diane Leonard</h3>
-                  </div>
-                  <div class="card-body">
-                    <p>
-                      Diane Leonard is the Executive Assistant. Ms. Leonard began work in the Mayor's
-                      Office in 1977 under Mayor Abraham Beame. She was assigned to work as an Office Aide for
-                      the Midtown Enforcement Project, a federally funded program which focused on law
-                      enforcement initiatives in the Times Square area of Manhattan. That project became the
-                      Office of Midtown Enforcement and ultimately the Office of Special Enforcement.
-                      Throughout her service, Diane has remained a steadfast, professional and trusted member
-                      of the administrative staff. Diane earned an Associate of Applied Science Degree from
-                      New York City Community College (CUNY).
-                    </p>
-                  </div>
+                  <h3>Know Your Rights</h3>
+                  <p>
+                    Find out more about disability rights and learn about&nbsp;<b
+                      ><a
+                        href="https://www1.nyc.gov/site/mopd/laws/mayors-office-for-people-with-disabilities-grievance-procedure.page"
+                        >the Mayor's Office for People with Disabilities' Notice and Grievance Procedure</a
+                      ></b
+                    >.
+                  </p>
                 </div>
               </div>
               <!-- .narrow -->
