--- a/contact/contact.html
+++ b/contact/contact.html
@@ -175,6 +175,11 @@
                               >Contracts & Solicitations</a
                             >
                           </li>
+                          <li>
+                            <a href="../about/language-access.html"
+                              >Language Access</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
