--- a/illegal-short-term-rentals/index.html
+++ b/illegal-short-term-rentals/index.html
@@ -175,6 +175,9 @@
                               >Contracts & Solicitations</a
                             >
                           </li>
+                          <li>
+                            <a href="../about/language-access.html">Language Access</a>
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -279,7 +282,11 @@
                       <div class="dropdown-menu" aria-labelledby="nav-item-03">
                         <ul class="extensible-list">
                           <li><a href="../contact/contact.html">Contact OSE</a></li>
-                          <li><a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank">Submit a Complaint</a></li>
+                          <li>
+                            <a href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
+                              >Submit a Complaint</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -427,13 +434,13 @@
                   legal action?
                 </h5>
                 <a
-                    class="btn btn-lg btn-outline-primary has-icon"
-                    href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
-                    style="margin-top: 0.5em;"
-                  >
-                    <span class="fas fa-angle-right" role="img"></span>
-                    <span class="title">Take our quiz find out</span>
-                  </a>
+                  class="btn btn-lg btn-outline-primary has-icon"
+                  href="../illegal-short-term-rentals/quiz.html"
+                  style="margin-top: 0.5em;"
+                >
+                  <span class="fas fa-angle-right" role="img"></span>
+                  <span class="title">Take our quiz find out</span>
+                </a>
                 <div class="accordion-group my-4" role="tablist" id="accordion-01">
                   <h3>Hosts:</h3>
                   <p>
@@ -541,9 +548,9 @@
                           <li>
                             Visitors who book short-term rentals in New York City are not held responsible
                             for a rental that turns out to be illegal. If inspectors arrive at your rental
-                            location while you are there, we ask that you cooperate with their investigation.
-                            After checking for their identification, please provide information that can aid
-                            in our investigation.
+                            location while you are there, we ask that you cooperate with their
+                            investigation. After checking for their identification, please provide
+                            information that can aid in our investigation.
                           </li>
                           <li>
                             In the event conditions are deemed to be hazardous or unsafe, visitors will need
@@ -618,7 +625,8 @@
                   <!-- .card -->
                   <a
                     class="btn btn-lg btn-outline-primary has-icon"
-                    href="https://portal.311.nyc.gov/article/?kanumber=KA-02317" target="_blank"
+                    href="https://portal.311.nyc.gov/article/?kanumber=KA-02317"
+                    target="_blank"
                   >
                     <span class="fas fa-angle-right" role="img"></span>
                     <span class="title">Submit a Complaint</span>
