--- a/illegal-short-term-rentals/quiz.html
+++ b/illegal-short-term-rentals/quiz.html
@@ -175,6 +175,11 @@
                               >Contracts & Solicitations</a
                             >
                           </li>
+                          <li>
+                            <a href="../about/language-access.html"
+                              >Language Access</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -436,7 +441,7 @@
                     <img src="../images/quiz-images/housing-type.png" alt="" />
                     <div class="question">What type of dwelling will you be hosting in?</div>
                     <div class="answer" data-route="h-02" data-type="dwelling" data-val="apartment">
-                      Apartment Building with 2 or more units
+                      Apartment Building with 3 or more units
                     </div>
                     <div class="answer" data-route="h-02" data-type="dwelling" data-val="coop">
                       Co-Op/Condo
@@ -455,7 +460,7 @@
                       Fewer than 30 days
                     </div>
                     <div class="answer" data-route="h-03" data-type="days" data-val="gt30">
-                      More than 30 days
+                      30 days or more
                     </div>
                   </div>
                   <div id="h-03" class="question-wrap">
@@ -488,7 +493,7 @@
                       Fewer than 30 days
                     </div>
                     <div class="answer" data-route="t-02" data-type="days" data-val="gt30">
-                      More than 30 days
+                      30 days or more
                     </div>
                   </div>
                   <div id="t-02" class="question-wrap">
@@ -549,12 +554,13 @@
                       </div>
                       <div class="gt30-description">
                         <p>
-                          Rentals of longer than 30 days aren’t considered short-term rentals. Your proposed
-                          rental activity is legal, so long as you are renting for more than 30 days.
+                          Rentals of 30 days or longer aren’t considered short-term rentals. Your proposed
+                          rental activity is legal, so long as you are renting for more than 30 days or
+                          more.
                         </p>
                         <p>
-                          If you are considering rentals of fewer than 30 days, retake the quiz to find out if
-                          your rental is legal.
+                          If you are considering rentals of fewer than 30 days, retake the quiz to find out
+                          if your rental is legal.
                         </p>
                       </div>
                       <div class="details">
@@ -569,7 +575,7 @@
                               room behind them. Every member of the family and all guests must have access
                               to all parts of the dwelling. Internal doors with such key locks create
                               barriers to escaping in an emergency and may result in the issuance of a
-                              temporary vacate order.
+                              temporary vacate order due to an immediately hazardous situation.
                             </div>
                           </li>
                           <li result-type="number-guests">
@@ -596,8 +602,8 @@
                       </div>
                       <div class="gt30-description">
                         <p>
-                          Stays of longer than 30 days aren’t considered short-term rentals. Your proposed
-                          rental activity is legal, so long as you stay for more than 30 days.
+                          Stays of 30 days or longer aren’t considered short-term rentals. Your proposed
+                          rental activity is legal, so long as you stay for 30 days or more.
                         </p>
                         <p>
                           If you are considering stays of fewer than 30 days, retake the quiz to find out if
@@ -624,7 +630,11 @@
                           </li>
                           <li result-type="number-guests">
                             The traveling party must be 2 guests or fewer.
-                            <div class="subtext"></div>
+                            <div class="subtext">
+                              You can only have one or two people in your traveling party if you are to stay
+                              for fewer than 30 days. Three or more persons in a traveling party violates
+                              occupant safety laws.
+                            </div>
                           </li>
                         </ul>
                       </div>
