--- a/about/mission-and-vision.html
+++ b/about/mission-and-vision.html
@@ -175,6 +175,11 @@
                               >Contracts & Solicitations</a
                             >
                           </li>
+                          <li>
+                            <a href="../about/language-access.html"
+                              >Language Access</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
@@ -417,6 +422,13 @@
                     role="listitem"
                   >
                     Contracts and Solicitations
+                  </a>
+                  <a
+                    href="./language-access.html"
+                    class="list-group-item list-group-item-action"
+                    role="listitem"
+                  >
+                    Language Access
                   </a>
                 </div>
               </nav>
