--- a/index.html
+++ b/index.html
@@ -173,6 +173,11 @@
                           <li>
                             <a href="./about/contracts-and-solicitations.html">Contracts & Solicitations</a>
                           </li>
+                          <li>
+                            <a href="./about/language-access.html"
+                              >Language Access</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
