--- a/laws-and-fines/resolve-a-violation.html
+++ b/laws-and-fines/resolve-a-violation.html
@@ -159,6 +159,11 @@
                               >Contracts & Solicitations</a
                             >
                           </li>
+                          <li>
+                            <a href="../about/language-access.html"
+                              >Language Access</a
+                            >
+                          </li>
                         </ul>
                       </div>
                     </div>
