--- a/illegal-short-term-rentals/quiz.html
+++ b/illegal-short-term-rentals/quiz.html
@@ -176,9 +176,7 @@
                             >
                           </li>
                           <li>
-                            <a href="../about/language-access.html"
-                              >Language Access</a
-                            >
+                            <a href="../about/language-access.html">Language Access</a>
                           </li>
                         </ul>
                       </div>
@@ -631,9 +629,7 @@
                           <li result-type="number-guests">
                             The traveling party must be 2 guests or fewer.
                             <div class="subtext">
-                              You can only have one or two people in your traveling party if you are to stay
-                              for fewer than 30 days. Three or more persons in a traveling party violates
-                              occupant safety laws.
+                              Three or more persons in a traveling party violates occupant safety laws.
                             </div>
                           </li>
                         </ul>
